<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/widget_layout"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:layout_margin="5dp"  		        
    	android:gravity="center|top"
    	android:background="@drawable/widget_shape" >
    	
        <ImageView
            android:id="@+id/widget_picIcon"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/widget_lblServer"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:contentDescription="@string/widget_icon_desc"
            android:src="@drawable/ic_launcher" >

    	</ImageView>

	    <TextView
	        android:id="@+id/widget_lblServer"
	        style="@android:style/TextAppearance.Medium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:layout_toRightOf="@+id/widget_picIcon"
	        android:layout_margin="4dp"  		        
	        android:gravity="center|top"
	        android:text="@string/widget_lblServer" />

	    <Button
	        android:id="@+id/btnWidgetScan"
	      	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	       	android:layout_toRightOf="@+id/widget_picIcon"
	        android:text="@string/btnWidgetScan_label" />
    
    </RelativeLayout>        